2011-01-24 Heath Harrelson <heath.harrelson@gmail.com>
	* readme.txt: Improve wording.

2011-01-23 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 2.0.0

2011-01-23 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Refactor to not use nested functions.
		Remove support for ancient versions of WordPress.
		Add option to animate list expansion using jQuery.
		Increase version number.
	* flexo.js: Rewrite to use jQuery.
	* flexo-anim.js: Added. JavaScript for animated list expansion.
	* readme.txt: Update latest WordPress tested.
		Update stable version, description, installation, history.

2008-12-19 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.13

2008-07-25 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.12

2008-07-25 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Change the plugin URI.
		Bump version number.
	* readme.txt: Update latest WordPress version tested.
		Updated stable version, description, installation, history.

2008-04-17 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.11

2008-04-16 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Modify the widget to use
		wp_enqueue_script to load JS if it's available 
		(tip from planetozh.com). Bumped version number 
		to 1.0.11.
	* readme.txt: Update stable version number.

2008-04-16 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.10

2008-04-16 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Add a description of the widget;
		displays when user is in widget management panel.
		Bump version number.
	* readme.txt: Update stable version number.

2008-04-05 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.9

2008-04-05 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Bump version number
	* readme.txt: Update version numbers

2007-10-21 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.8
